# SmartExam-MR

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  scaffold.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: architecture.md  dataset_plan.md  development_workflow.md  mvp_scope.md  project_brief.md
scripts/: generate_synthetic_data.py
src/smartexam_mr/data/: feature_engineering.py  load_data.py  preprocess.py
src/smartexam_mr/models/: grading.py
src/smartexam_mr/pipeline/: build_pipeline.py
tests/: test_grading.py  test_preprocess.py
